--- a/style.css
+++ b/style.css
@@ -12,13 +12,15 @@ h1 {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
     margin-bottom: 100px;
 }
 
 .half-width {
     width: 50%;
+    padding-left: 2%;
+    box-shadow: 10px 10px yellowgreen;
 }
 
 .half-width image {
@@ -42,4 +44,28 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experiences-item {
+    width: 40%;
+    margin-left: 5%;
+    margin: 5%;
+    padding-left: 20%;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+    border-left: 7px solid blue;
+}
+
+.express-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#full-stack-developer {
+    border-left: 7px solid tomato;
+}
+
+#baby-web-developer {
+    border-left: solid blue;
 }
